# websocket_prac

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  db.py  main.py  migrate_db.py  model.py  pyproject.toml
backend/lib/: manager.py
backend/repository/: room.py  webcosket.py
backend/router/: room.py  websocket.py
backend/scheme/: room.py
frontend/: package-lock.json  package.json
frontend/lib/: providers.tsx
frontend/src/app/: layout.tsx
frontend/src/app/chat/[socket_id]/: page.tsx
frontend/src/app/chat/_components/: messageInput.tsx  messageList.tsx
frontend/src/app/room/: page.tsx
frontend/src/app/room/_components/: roomInput.tsx  roomList.tsx
