[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ogata Katsuya <130939004+ogatakatsuya@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
cryptography = "^42.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
